# academy

./: percentage_use_random.cpp  shared_ptr.cpp  unique.cpp
allocator/: Source.cpp  allocator.h  deque.h
any_tuple/: any.h  main.cpp  tuple.h
cmake/: CMakeLists.txt
cmake/MyLibrary/: myLibrary.cpp
cmake/first_project/: CMakeProject.cpp
cmake/gtest_external/: CMakeLists.txt
cmake/gtest_external/fizz_buzz_header/: CMakeLists.txt  fizzBuzz.h
cmake/gtest_external/unit_tests/: CMakeLists.txt  test_fizz_buzz.cpp
dll_dynamic_download/: Interface.h  LibraryDownload.h  dll-import.cpp
exceptions/: main.cpp
natvis/: NatvisFile.natvis  deque.h  main.cpp
prime_number/: PrimeNumberCalculator.cpp  PrimeNumberCalculator.h  PrimeNumberUnitTest.cpp
smart pointers/: Source.cpp  shared_pointer.h  shared_ptr.cpp  unique_pointer.h  weak_pointer.h
smart pointers/shared and weak pointer/: Source.cpp  shared_pointer.h  shared_ptr.cpp  weak_pointer.h
test/: any.h  tuple.h
thread/cache_problem_with_sum/: test_thread.cpp
